--- a/assets/app/views/cards.html
+++ b/assets/app/views/cards.html
@@ -5,18 +5,31 @@
 		<div class='col-xs-6 graphic'>
 			<img ng-src='{{card.graphic_file_name}}'/>
 		</div>
-		<div class='col-xs-6 description'>
-			<p> {{card.description}} </p>
+		<div class='col-xs-6'>
+			<p class='description'> {{card.description}} </p>
 		</div>
 	</div>
 	<div class='row'>
 		<div class='col-xs-6'>
-			<p class='start'> Start Date:</p>
-			<p> {{card.start_date}} </p>
+		<p class='price'> ${{card.price}} </p> 
 		</div>
 		<div class='col-xs-6'>
-			<p class='end'> End Date: </p>
-			<p> {{card.end_date}} </p>
+			<div class='row start'>
+				<div class='col-xs-6'>
+					<p> Start Date: </p>
+				</div>
+				<div class='col-xs-6'>
+					<p> {{card.start_date}} </p>
+				</div>
+			</div>
+			<div class ='row end'>
+				<div class='col-xs-6'>
+					<p> End Date:</p>
+				</div>
+				<div class='col-xs-6'>
+					<p> {{card.end_date}} </p>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
