--- a/assets/app/styles/cards.css
+++ b/assets/app/styles/cards.css
@@ -18,12 +18,18 @@
 	padding-left: 10px;
 }
 
+.graphic img {
+	width: 160px;
+	height: 90px;
+}
+
 .description {
 	padding-left: 15px;
 }
 
 .start, .end{
 	margin: 0 0 2px 0;
+	font-size: 10px;
 }
 
 .price {
