--- a/assets/app/views/cards.html
+++ b/assets/app/views/cards.html
@@ -1,3 +1,6 @@
+<div class='banner-top'>
+	<img src="../images/silver_star_logo.jpg"/>
+</div>
 <div class='card' ng-repeat='card in allCards'>
 	<h2 class='title'> {{card.title}} </h2>
 	<hr/>
