--- a/assets/app/styles/cards.css
+++ b/assets/app/styles/cards.css
@@ -1,8 +1,16 @@
+body  {
+	background-color: #DFDDDD;
+}
+
 .card {
-	background: rgba(34, 34, 34, .6);
-	color: #fff;
+	background-color: #fff;
+	color: #000;
 	width: 95%;
-	margin: 40px auto 15px auto;
+	margin: 20px auto 5px auto;
+}
+
+.space {
+	margin-bottom: 40px;
 }
 
 .row {
@@ -44,16 +52,31 @@
 	background-color: white;
 	position: fixed;
 	top: 0;
-	margin-bottom: 60px;
-	left: 0;
-	right: 0;
+	left: 4.8%;
+	right: 5%;
 	z-index: 10;
 }
 
 .banner-top img {
 	height: 50px;
 	display: block;
+	padding: 5px;
 	margin-left: auto;
 	margin-right: auto;
 
+}
+
+.banner-bottom {
+	background-color: white;
+	width: 95%;
+	margin: 10px auto;
+	z-index: 10;
+}
+
+.banner-bottom img {
+	height: 50px;
+	display: block;
+	padding: 5px;
+	margin-left: auto;
+	margin-right: auto;	
 }
