--- a/assets/app/styles/cards.css
+++ b/assets/app/styles/cards.css
@@ -49,11 +49,11 @@ body  {
 }
 
 .banner-top {
-	background-color: white;
 	position: fixed;
+	background-color: white;
 	top: 0;
-	left: 4.8%;
-	right: 5%;
+	left: 0;
+	right: 0;
 	z-index: 10;
 }
 
