--- a/assets/app/styles/cards.css
+++ b/assets/app/styles/cards.css
@@ -32,8 +32,8 @@ body  {
 }
 
 .description {
-	font-size: 8px;
-	word-wrap: break-word;
+	font-size: 12px;
+	word-wrap: normal;
 }
 
 .start, .end{
